# open-battlecry-archive

./: .gitignore  CMakeLists.txt  battlecry.sln
cmake/: compile_shaders.cmake  compile_textures.cmake
src/: animation.h  atomic.c  atomic.h  cvar.h  hash.c  hash.h  hash_map.h  jobs.c  jobs.h  log.c  log.h  macros.h  memory.c  memory.h  os.c  os.h  os_windows.c  pool.c  pool.h  random.h
src/asset/: asset.vcxproj  asset.vcxproj.filters  ktx.c  ktx.h
src/client/: buffer_pool.c  buffer_pool.h  client.vcxproj  client.vcxproj.filters  client_windows.c  font.h  font_arial_32.c  gpu.c  gpu.h  gpu_buffer.c  gpu_memory.c  graphics.c  input.c  input.h  main.c  pipeline.cache  render.c  render.h  renderer.c  renderer.h  resource.c  resource.h  shaders.h  window.c  window.h
src/client/fonts/: arial_32.h
src/client/resources/: ktx.c  ktx.h  pack.c  pack.h
src/client/shaders/: blit_frag.h  fullscreen_vert.h  line.frag  line.vert  line_frag.h  line_vert.h  post_effect.frag  post_effect.vert  post_effect_frag.h  post_effect_vert.h  sprite.frag  sprite.vert  sprite_frag.h  sprite_vert.h
src/core/: atomic.h  common.h  core.vcxproj  core.vcxproj.filters  cvar.c  cvar.h  file.c  file.h  hash.c  hash.h  hash_map.c  hash_map.h  jobs.c  jobs.h  log.h  memory.h  os.c  os.h  pool.h  random.c  random.h
src/game/: game.c  game.h  game.vcxproj  game.vcxproj.filters  game_state.h
tools/: bmfont.bmfc
tools/asset_converter/: asset_converter.vcxproj  asset_converter.vcxproj.filters  main.c
tools/asset_packer/: asset_packer.vcxproj  asset_packer.vcxproj.filters  bc7.c  bc7.h  bc7_encode.comp  bc7_encode.h  bc7_try_mode_456.comp  bc7_try_mode_456.h  compile_shaders.bat  main.c  pipeline.cache  png.c  png.h  volk.c  volk.h
tools/shader_compiler/: dmon.h  main.c  shader_compiler.vcxproj  shader_compiler.vcxproj.filters  spirv_reflect.h
